feat: header/definitions for ChipStack and Player - set up game variables in main

--- a/DiceGame/DiceGame.vcxproj
+++ b/DiceGame/DiceGame.vcxproj
@@ -139,7 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ChipStack.cpp" />
+    <ClCompile Include="Dice.cpp" />
     <ClCompile Include="DiceGame.cpp" />
+    <ClCompile Include="Player.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ChipStack.hpp" />
+    <ClInclude Include="Dice.hpp" />
+    <ClInclude Include="Player.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
