--- a/DiceGame/DiceGame.vcxproj
+++ b/DiceGame/DiceGame.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -142,11 +142,13 @@
     <ClCompile Include="ChipStack.cpp" />
     <ClCompile Include="Dice.cpp" />
     <ClCompile Include="DiceGame.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ChipStack.hpp" />
     <ClInclude Include="Dice.hpp" />
+    <ClInclude Include="GameState.hpp" />
     <ClInclude Include="Player.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
